Source/Alternet.UI.Pal/Api/DrawingContext.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "DrawingContext.h"
#include "Image.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API c_bool DrawingContext_GetIsOk_(DrawingContext* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsOk();
    });
}

ALTERNET_UI_API void* DrawingContext_GetWxWidgetDC_(DrawingContext* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetWxWidgetDC();
    });
}

ALTERNET_UI_API InterpolationMode DrawingContext_GetInterpolationMode_(DrawingContext* obj)
{
    return MarshalExceptions<InterpolationMode>([&](){
        return obj->GetInterpolationMode();
    });
}

ALTERNET_UI_API void DrawingContext_SetInterpolationMode_(DrawingContext* obj, InterpolationMode value)
{
    MarshalExceptions<void>([&](){
        obj->SetInterpolationMode(value);
    });
}

ALTERNET_UI_API DrawingContext* DrawingContext_CreateMemoryDC_(float scaleFactor)
{
    return MarshalExceptions<DrawingContext*>([&](){
        return DrawingContext::CreateMemoryDC(scaleFactor);
    });
}

ALTERNET_UI_API DrawingContext* DrawingContext_CreateMemoryDCFromImage_(Image* image)
{
    return MarshalExceptions<DrawingContext*>([&](){
        return DrawingContext::CreateMemoryDCFromImage(image);
    });
}

ALTERNET_UI_API void* DrawingContext_GetHandle_(DrawingContext* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetHandle();
    });
}

ALTERNET_UI_API void DrawingContext_Save_(DrawingContext* obj)
{
    MarshalExceptions<void>([&](){
        obj->Save();
    });
}

ALTERNET_UI_API void DrawingContext_Restore_(DrawingContext* obj)
{
    MarshalExceptions<void>([&](){
        obj->Restore();
    });
}

ALTERNET_UI_API void DrawingContext_SetClippingRect_(DrawingContext* obj, RectD* rect)
{
    MarshalExceptions<void>([&](){
        obj->SetClippingRect(*rect);
    });
}

ALTERNET_UI_API RectD_C DrawingContext_GetClippingBox_(DrawingContext* obj)
{
    return MarshalExceptions<RectD_C>([&](){
        return obj->GetClippingBox();
    });
}

ALTERNET_UI_API SizeI_C DrawingContext_GetSize_(DrawingContext* obj)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetSize();
    });
}

ALTERNET_UI_API SizeI_C DrawingContext_GetPPI_(DrawingContext* obj)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetPPI();
    });
}

ALTERNET_UI_API void DrawingContext_DrawBitmapAtPointI_(DrawingContext* obj, Image* image, int x, int y, c_bool useMask)
{
    MarshalExceptions<void>([&](){
        obj->DrawBitmapAtPointI(image, x, y, useMask);
    });
}

ALTERNET_UI_API void DrawingContext_DrawBitmapAtRectI_(DrawingContext* obj, Image* image, RectI* rect, c_bool useMask)
{
    MarshalExceptions<void>([&](){
        obj->DrawBitmapAtRectI(image, *rect, useMask);
    });
}

ALTERNET_UI_API SizeI_C DrawingContext_GetDpi_(DrawingContext* obj)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetDpi();
    });
}

ALTERNET_UI_API void DrawingContext_ImageFromDrawingContext_(Image* image, int width, int height, DrawingContext* dc)
{
    MarshalExceptions<void>([&](){
        DrawingContext::ImageFromDrawingContext(image, width, height, dc);
    });
}

ALTERNET_UI_API void DrawingContext_ImageFromGenericImageDC_(Image* image, void* source, DrawingContext* dc)
{
    MarshalExceptions<void>([&](){
        DrawingContext::ImageFromGenericImageDC(image, source, dc);
    });
}

ALTERNET_UI_API SizeD_C DrawingContext_GetTextExtentSimple_(DrawingContext* obj, NativeStringSpan* text, void* font)
{
    return MarshalExceptions<SizeD_C>([&](){
        return obj->GetTextExtentSimple(*text, font);
    });
}

ALTERNET_UI_API float DrawingContext_GetFontRefHeight_(DrawingContext* obj, void* fontRef)
{
    return MarshalExceptions<float>([&](){
        return obj->GetFontRefHeight(fontRef);
    });
}

ALTERNET_UI_API float DrawingContext_GetTextHeight_(DrawingContext* obj, NativeStringSpan* text, void* font)
{
    return MarshalExceptions<float>([&](){
        return obj->GetTextHeight(*text, font);
    });
}

ALTERNET_UI_API DrawingContext* DrawingContext_FromImage_(Image* image)
{
    return MarshalExceptions<DrawingContext*>([&](){
        return DrawingContext::FromImage(image);
    });
}

ALTERNET_UI_API DrawingContext* DrawingContext_FromScreen_()
{
    return MarshalExceptions<DrawingContext*>([&](){
        return DrawingContext::FromScreen();
    });
}

ALTERNET_UI_API void DrawingContext_DrawImageAtPoint_(DrawingContext* obj, Image* image, PointD* origin, c_bool useMask)
{
    MarshalExceptions<void>([&](){
        obj->DrawImageAtPoint(image, *origin, useMask);
    });
}

ALTERNET_UI_API void DrawingContext_DrawImageAtRect_(DrawingContext* obj, Image* image, RectD* destinationRect, c_bool useMask)
{
    MarshalExceptions<void>([&](){
        obj->DrawImageAtRect(image, *destinationRect, useMask);
    });
}

ALTERNET_UI_API void DrawingContext_SetTransformValues_(DrawingContext* obj, float m11, float m12, float m21, float m22, float dx, float dy)
{
    MarshalExceptions<void>([&](){
        obj->SetTransformValues(m11, m12, m21, m22, dx, dy);
    });
}