Source/Alternet.UI/Native/DrawingContext.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class DrawingContext : NativeObject
    {
        static DrawingContext()
        {
        }
        
        private DrawingContext()
        {
        }
        
        public DrawingContext(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public bool IsOk
        {
            get
            {
                CheckDisposed();
                return NativeApi.DrawingContext_GetIsOk_(NativePointer);
            }
            
        }
        
        public System.IntPtr WxWidgetDC
        {
            get
            {
                CheckDisposed();
                return NativeApi.DrawingContext_GetWxWidgetDC_(NativePointer);
            }
            
        }
        
        public Alternet.Drawing.InterpolationMode InterpolationMode
        {
            get
            {
                CheckDisposed();
                return NativeApi.DrawingContext_GetInterpolationMode_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.DrawingContext_SetInterpolationMode_(NativePointer, value);
            }
        }
        
        public static DrawingContext CreateMemoryDC(float scaleFactor)
        {
            var _nnn = NativeApi.DrawingContext_CreateMemoryDC_(scaleFactor);
            var _mmm = NativeObject.GetFromNativePointer<DrawingContext>(_nnn, p => new DrawingContext(p))!;
            ReleaseNativeObjectPointer(_nnn);
            return _mmm;
        }
        
        public static DrawingContext CreateMemoryDCFromImage(Image image)
        {
            var _nnn = NativeApi.DrawingContext_CreateMemoryDCFromImage_(image.NativePointer);
            var _mmm = NativeObject.GetFromNativePointer<DrawingContext>(_nnn, p => new DrawingContext(p))!;
            ReleaseNativeObjectPointer(_nnn);
            return _mmm;
        }
        
        public System.IntPtr GetHandle()
        {
            CheckDisposed();
            return NativeApi.DrawingContext_GetHandle_(NativePointer);
        }
        
        public void Save()
        {
            CheckDisposed();
            NativeApi.DrawingContext_Save_(NativePointer);
        }
        
        public void Restore()
        {
            CheckDisposed();
            NativeApi.DrawingContext_Restore_(NativePointer);
        }
        
        public void SetClippingRect(Alternet.Drawing.RectD rect)
        {
            CheckDisposed();
            var rect_Native = rect.ToNative();
NativeApi.DrawingContext_SetClippingRect_(NativePointer, ref rect_Native);
        }
        
        public Alternet.Drawing.RectD GetClippingBox()
        {
            CheckDisposed();
            return NativeApi.DrawingContext_GetClippingBox_(NativePointer);
        }
        
        public Alternet.Drawing.SizeI GetSize()
        {
            CheckDisposed();
            return NativeApi.DrawingContext_GetSize_(NativePointer);
        }
        
        public Alternet.Drawing.SizeI GetPPI()
        {
            CheckDisposed();
            return NativeApi.DrawingContext_GetPPI_(NativePointer);
        }
        
        public void DrawBitmapAtPointI(Image image, int x, int y, bool useMask)
        {
            CheckDisposed();
            NativeApi.DrawingContext_DrawBitmapAtPointI_(NativePointer, image.NativePointer, x, y, useMask);
        }
        
        public void DrawBitmapAtRectI(Image image, Alternet.Drawing.RectI rect, bool useMask)
        {
            CheckDisposed();
            var rect_Native = rect.ToNative();
NativeApi.DrawingContext_DrawBitmapAtRectI_(NativePointer, image.NativePointer, ref rect_Native, useMask);
        }
        
        public Alternet.Drawing.SizeI GetDpi()
        {
            CheckDisposed();
            return NativeApi.DrawingContext_GetDpi_(NativePointer);
        }
        
        public static void ImageFromDrawingContext(Image image, int width, int height, DrawingContext dc)
        {
            NativeApi.DrawingContext_ImageFromDrawingContext_(image.NativePointer, width, height, dc.NativePointer);
        }
        
        public static void ImageFromGenericImageDC(Image image, System.IntPtr source, DrawingContext dc)
        {
            NativeApi.DrawingContext_ImageFromGenericImageDC_(image.NativePointer, source, dc.NativePointer);
        }
        
        public Alternet.Drawing.SizeD GetTextExtentSimple(Alternet.UI.NativeStringSpan text, System.IntPtr font)
        {
            CheckDisposed();
            var text_Native = text.ToNative();
return NativeApi.DrawingContext_GetTextExtentSimple_(NativePointer, ref text_Native, font);
        }
        
        public float GetFontRefHeight(System.IntPtr fontRef)
        {
            CheckDisposed();
            return NativeApi.DrawingContext_GetFontRefHeight_(NativePointer, fontRef);
        }
        
        public float GetTextHeight(Alternet.UI.NativeStringSpan text, System.IntPtr font)
        {
            CheckDisposed();
            var text_Native = text.ToNative();
return NativeApi.DrawingContext_GetTextHeight_(NativePointer, ref text_Native, font);
        }
        
        public static DrawingContext FromImage(Image image)
        {
            var _nnn = NativeApi.DrawingContext_FromImage_(image.NativePointer);
            var _mmm = NativeObject.GetFromNativePointer<DrawingContext>(_nnn, p => new DrawingContext(p))!;
            ReleaseNativeObjectPointer(_nnn);
            return _mmm;
        }
        
        public static DrawingContext FromScreen()
        {
            var _nnn = NativeApi.DrawingContext_FromScreen_();
            var _mmm = NativeObject.GetFromNativePointer<DrawingContext>(_nnn, p => new DrawingContext(p))!;
            ReleaseNativeObjectPointer(_nnn);
            return _mmm;
        }
        
        public void DrawImageAtPoint(Image image, Alternet.Drawing.PointD origin, bool useMask)
        {
            CheckDisposed();
            var origin_Native = origin.ToNative();
NativeApi.DrawingContext_DrawImageAtPoint_(NativePointer, image.NativePointer, ref origin_Native, useMask);
        }
        
        public void DrawImageAtRect(Image image, Alternet.Drawing.RectD destinationRect, bool useMask)
        {
            CheckDisposed();
            var destinationRect_Native = destinationRect.ToNative();
NativeApi.DrawingContext_DrawImageAtRect_(NativePointer, image.NativePointer, ref destinationRect_Native, useMask);
        }
        
        public void SetTransformValues(float m11, float m12, float m21, float m22, float dx, float dy)
        {
            CheckDisposed();
            NativeApi.DrawingContext_SetTransformValues_(NativePointer, m11, m12, m21, m22, dx, dy);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool DrawingContext_GetIsOk_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr DrawingContext_GetWxWidgetDC_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.InterpolationMode DrawingContext_GetInterpolationMode_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_SetInterpolationMode_(IntPtr obj, Alternet.Drawing.InterpolationMode value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr DrawingContext_CreateMemoryDC_(float scaleFactor);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr DrawingContext_CreateMemoryDCFromImage_(IntPtr image);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr DrawingContext_GetHandle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_Save_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_Restore_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_SetClippingRect_(IntPtr obj, ref Alternet.Drawing.RectD rect);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.RectD DrawingContext_GetClippingBox_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeI DrawingContext_GetSize_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeI DrawingContext_GetPPI_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_DrawBitmapAtPointI_(IntPtr obj, IntPtr image, int x, int y, bool useMask);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_DrawBitmapAtRectI_(IntPtr obj, IntPtr image, ref Alternet.Drawing.RectI rect, bool useMask);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeI DrawingContext_GetDpi_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_ImageFromDrawingContext_(IntPtr image, int width, int height, IntPtr dc);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_ImageFromGenericImageDC_(IntPtr image, System.IntPtr source, IntPtr dc);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeD DrawingContext_GetTextExtentSimple_(IntPtr obj, ref Alternet.UI.NativeStringSpan text, System.IntPtr font);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern float DrawingContext_GetFontRefHeight_(IntPtr obj, System.IntPtr fontRef);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern float DrawingContext_GetTextHeight_(IntPtr obj, ref Alternet.UI.NativeStringSpan text, System.IntPtr font);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr DrawingContext_FromImage_(IntPtr image);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr DrawingContext_FromScreen_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_DrawImageAtPoint_(IntPtr obj, IntPtr image, ref Alternet.Drawing.PointD origin, bool useMask);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_DrawImageAtRect_(IntPtr obj, IntPtr image, ref Alternet.Drawing.RectD destinationRect, bool useMask);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void DrawingContext_SetTransformValues_(IntPtr obj, float m11, float m12, float m21, float m22, float dx, float dy);
            
        }
    }
}
